# server/api/controllers/magasinier/router.js
@@ -4,9 +4,11 @@ import controller from './controller';
 export default express
   .Router()
   .post('/', controller.create)
+  .post('/magasinierbymagasin', controller.createbymagasinid)
   .post('/changePassword', controller.changePassword)
   .post('/changePhone', controller.changePhone)
   .delete('/delete/:id', controller.delete)
   .post('/changeNom_complet', controller.changenome)
   .get('/', controller.all)
-  .get('/:id', controller.byId);
+  .get('/:id', controller.byId)
+  .get('/bymagasin/:id', controller.bymagasin);
